Fixed: Error Gap

--- a/src/css/adds.css
+++ b/src/css/adds.css
@@ -1,9 +1,9 @@
-.adds .bg-img {
+.adds {
   background-image: url("../assets/images/add/add.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   height: 417px;
-  padding: 20px;
+  max-width: 1315px;
   border-radius: 20px;
 }
